welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:-6: error: Missing closing brace `}' assumed here
try {
^fizzBuzz:1: error: expected class or object definition
def fizzBuzz(a:Int):String = {
^